refactor(domain): melhora validação e normalização da função